--- a/assets/sass/components/_carousel.scss
+++ b/assets/sass/components/_carousel.scss
@@ -1,41 +1,14 @@
-//Header slider
-.portfolio_slider{
-	position:relative;
-	width:100%;
-	height:100vh;
-	overflow:hidden;
+.slider{
+  height: 70px;
+  width: 100%;
+  position: relative;
+  
+  .slider_item{
+    height: 60px;
 
-	.item{
-		height:100vh;
-		position: relative;
-
-		.item_background{
-			background: #000;
-			background-size:cover;
-			background-position:center;
-			background-repeat:no-repeat;
-			@include overlay(fixed);
-		}
-	}
-}
-
-.slider-nav{
-	position:relative;
-	left:0;
-	top:50%;
-	width:100%;
-	margin-top:-400px;
-	z-index:99;
- 
-	.case_title{
-		color: $white;
-		@include font-size(40px);
-		display: block;
-		width: 100%; 
-		margin:15px 0;
-		font-weight: $semi-bold; 
-		cursor: pointer;
-		height:30px;
-		position: relative;
-	}
+    img{
+      width:150px;
+      height:auto;
+    }
+  }
 }
