--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -8377,175 +8377,52 @@ a {
     color: #1fc3b4;
     text-decoration: none; }
 
-nav {
-  font-size: 22px;
-  font-size: 1.375rem;
-  position: fixed;
-  z-index: 99;
-  width: 100%; }
-  nav .topNav {
-    border-bottom: 1px solid #ffffff;
-    padding-bottom: 10px; }
-    nav .topNav .contactNav {
-      margin-left: 20px;
-      display: block;
-      margin-top: 10px; }
-      nav .topNav .contactNav span {
-        display: inline-block;
-        margin-right: 15px; }
-    nav .topNav .socialNav {
-      margin-right: 20px; }
-      nav .topNav .socialNav li {
-        display: inline-block;
-        list-style: none;
-        margin-left: 15px; }
-        nav .topNav .socialNav li .fa {
-          font-size: 30px;
-          font-size: 1.875rem; }
-  nav .hamburger {
-    position: relative;
-    width: 40px;
-    height: 18px;
-    margin-top: 18px;
-    cursor: pointer; }
-    nav .hamburger span {
-      width: 100%;
-      position: absolute;
-      height: 2px;
-      background: #1fc3b4;
-      -webkit-transition: all 0.2s ease;
-      -moz-transition: all 0.2s ease;
-      -ms-transition: all 0.2s ease;
-      -o-transition: all 0.2s ease;
-      transition: all 0.2s ease; }
-      nav .hamburger span:first-child {
-        top: 2%; }
-      nav .hamburger span:nth-child(2) {
-        top: 50%; }
-      nav .hamburger span:last-child {
-        top: 100%; }
-    nav .hamburger.active span:first-child {
-      top: 12px;
-      -ms-transform: rotate(45deg);
-      -webkit-transform: rotate(45deg);
-      transform: rotate(45deg); }
-    nav .hamburger.active span:nth-child(2) {
-      width: 0;
-      -ms-transform: rotate(45deg);
-      -webkit-transform: rotate(45deg);
-      transform: rotate(45deg);
-      opacity: 0; }
-    nav .hamburger.active span:last-child {
-      top: 12px;
-      -ms-transform: rotate(135deg);
-      -webkit-transform: rotate(135deg);
-      transform: rotate(135deg); }
-  nav .menu {
-    visibility: hidden;
-    opacity: 0;
-    text-align: center;
-    position: fixed;
-    width: 350px;
-    right: -350px;
-    top: 0;
-    bottom: 0;
-    height: 100%;
-    background: #ffffff;
-    -webkit-transition: all 0.2s ease;
-    -moz-transition: all 0.2s ease;
-    -ms-transition: all 0.2s ease;
-    -o-transition: all 0.2s ease;
-    transition: all 0.2s ease;
-    -moz-box-shadow: 0px 0px 5px #272727;
-    -webkit-box-shadow: 0px 0px 5px #272727;
-    box-shadow: 0px 0px 5px #272727; }
-    nav .menu.active {
-      right: 0;
-      visibility: visible;
-      opacity: 1; }
-    nav .menu ul {
-      height: 450px;
-      position: absolute;
-      top: 50%;
-      margin-top: -225px;
-      width: 100%;
-      padding: 25px; }
-      nav .menu ul li {
-        display: block;
-        color: #272727;
-        text-transform: uppercase;
-        font-size: 30px;
-        font-size: 1.875rem;
-        margin: 20px 0; }
-
-.portfolio_slider {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden; }
-  .portfolio_slider .item {
-    height: 100vh;
-    position: relative; }
-    .portfolio_slider .item .item_background {
-      background: #000;
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      position: fixed;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      height: 100%;
-      width: 100%; }
-
-.slider-nav {
-  position: relative;
-  left: 0;
-  top: 50%;
-  width: 100%;
-  margin-top: -400px;
-  z-index: 99; }
-  .slider-nav .case_title {
-    color: #ffffff;
-    font-size: 40px;
-    font-size: 2.5rem;
-    display: block;
-    width: 100%;
-    margin: 15px 0;
-    font-weight: 600;
-    cursor: pointer;
-    height: 30px;
-    position: relative; }
-
-.portfolio {
-  height: 100vh;
+.slider {
+  height: 70px;
   width: 100%;
   position: relative; }
-  .portfolio .container {
-    position: relative; }
+  .slider .slider_item {
+    height: 60px; }
+    .slider .slider_item img {
+      width: 150px;
+      height: auto; }
 
-.services {
-  background: #1fc3b4;
-  color: #ffffff; }
-  .services .col-sm-4 {
-    padding: 50px 0;
-    height: 300px;
-    text-align: center;
-    color: #ffffff; }
-    .services .col-sm-4 h1 {
-      margin: 20px 0;
-      font-size: 32px;
-      font-size: 2rem;
-      text-transform: uppercase;
-      font-weight: 500; }
-    .services .col-sm-4 p {
-      font-size: 25px;
-      font-size: 1.5625rem;
-      font-weight: 100;
-      line-height: 25px; }
+.portfolio .col-sm-6 {
+  position: relative; }
+  .portfolio .col-sm-6 .bg {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    background-position: center;
+    background-size: cover; }
 
 body {
   background: #ffffff; }
+  body video#bgvid {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    background: url("../../images/background_home.jpg") no-repeat;
+    background-size: cover; }
+
+@media screen and (max-width: 768px) {
+  html {
+    background: url("../../images/background_home.jpg") #000 no-repeat center center fixed; }
+
+  #bgvid {
+    display: none; } }
 
 /*# sourceMappingURL=main.css.map */
