--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,7 +5,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
-@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700");
+@import url("https://fonts.googleapis.com/css?family=Lato:300,400,700,900");
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -8360,7 +8360,7 @@ table {
   border-spacing: 0; }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 18px;
   font-size: 1.125rem;
   color: #272727; }
@@ -8402,27 +8402,5 @@ a {
 
 body {
   background: #ffffff; }
-  body video#bgvid {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -100;
-    -ms-transform: translateX(-50%) translateY(-50%);
-    -moz-transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
-    background: url("../../images/background_home.jpg") no-repeat;
-    background-size: cover; }
-
-@media screen and (max-width: 768px) {
-  html {
-    background: url("../../images/background_home.jpg") #000 no-repeat center center fixed; }
-
-  #bgvid {
-    display: none; } }
 
 /*# sourceMappingURL=main.css.map */
