--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -1,12 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900');
 
-$brand-font: 'Poppins', sans-serif;
+$brand-font: 'Lato', sans-serif;
 
-$light: 100;
+$light: 300;
 $regular: 400;
-$medium: 500;
-$semi-bold: 600;
-$bold: 700;
+$medium: 700;
+$bold: 900;
 
 body{
 	font-family: $brand-font;
